@@ -242,6 +242,7 @@
  function GSA:CheckFriendlyDebuffs(spellID)
 	if spellID == 9005 or spellID == 9823 or spellID == 9827 or spellID == 27006 -- Pounce
 		or spellID == 19577 -- Intimidation
+		or spellID == 12355 -- Impact (Fire Mage RNG stun talent)
 	then
 		return true
 	end
